# book-companion

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  test.sh
backend/: alembic.ini  hatch_build.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 48151a25cc0d_v1_3_eval_improvements.py  780a01d9a7ee_add_reading_state_created_at_and_.py  8b38146465ab_initial_schema.py  a1b2c3d4e5f6_add_tsvector_trigger.py  ba7c5b9dbcad_add_web_interface_tables.py  bb35febd1383_add_image_relevance_alttext_hash.py  c1d2e3f4a5b6_v1_1_enhancements.py  e152941ea209_initial_sqlite_schema.py  f17e79ee23cb_initial_sqlite_schema.py
backend/app/: __init__.py  config.py  exceptions.py  logging.py
backend/app/api/: deps.py  main.py  scheduler.py  schemas.py  sse.py  static_files.py
backend/app/api/routes/: ai_threads.py  annotations.py  audio.py  audio_position.py  backup.py  book_summary.py  books.py  concepts.py  eval.py  export.py  health.py  images.py  llm_status.py  processing.py  reading_presets.py  reading_state.py  search.py  sections.py  settings.py  spikes.py  summaries.py  summarize_presets.py  tags.py  views.py
backend/app/cli/: __init__.py  async_utils.py  deps.py  formatting.py  main.py
backend/app/cli/commands/: annotations_cmd.py  backup_cmd.py  books.py  concepts_cmd.py  config_cmd.py  doctor_cmd.py  edit_cmd.py  eval_cmd.py  export_cmd.py  health_cmd.py  init_cmd.py  listen_cmd.py  maintenance_cmd.py  model_cmd.py  preset_cmd.py  read_cmd.py  references_cmd.py  search_cmd.py  serve_cmd.py  spike_cmd.py  status_cmd.py  summarize_cmd.py  summary_cmds.py  tags_cmd.py
backend/app/cli/templates/: spike_tts_findings.md.j2
backend/app/config/: models.yaml
backend/app/db/: models.py  session.py
backend/app/db/repositories/: __init__.py  annotation_repo.py  audio_file_repo.py  audio_position_repo.py  book_repo.py  concept_repo.py  eval_repo.py  processing_repo.py  reading_state_repo.py  search_repo.py  section_repo.py  summary_repo.py  tag_repo.py
backend/app/migrations/: alembic.ini  env.py
backend/app/migrations/versions/: 0a1b2c3d4e5f_v1_6a_processing_job_cancel_and_summary_stale.py  2026_05_02_audiobook_mode.py  9a67312a27a7_v1_5b_preset_typography.py  a1b2c3d4e5f6_backfill_image_placeholders.py  a5459240fea0_v1_5_1_collapse_reading_presets.py  a7b8c9d0e1f2_v1_5e_annotation_anchor_columns.py  b2c3d4e5f6a7_reclassify_sections_and_prune_frontmatter.py  b8c9d0e1f2a3_v1_5f_book_suggested_tags_and_failure.py  c3d4e5f6a7b8_rewrite_raw_image_refs.py  c9d0e1f2a3b4_v1_5a_summary_image_rewrite.py  d0e1f2a3b4c5_v1_5b_blockquote_normalize.py  d4e5f6a7b8c9_v1_4a_schema.py  e0c48efb7afe_v1_5b_legacy_image_id_rewrite.py  e152941ea209_initial_sqlite_schema.py  e1f2a3b4c5d6_v1_5c_annotation_prefix_suffix.py  e5f6a7b8c9d0_v1_4b_backfill.py  f6a7b8c9d0e1_v1_5d_tags_schema_revival.py
backend/app/services/: ai_thread_service.py  annotation_service.py  audio_gen_service.py  audio_orphan_recovery.py  backup_service.py  book_service.py  concept_service.py  embedding_service.py  export_service.py  job_queue_worker.py  llm_preflight.py  preset_service.py  quality_service.py  reference_service.py  search_service.py  section_edit_service.py  settings_service.py  slug.py  summary_service.py  tag_service.py
backend/app/services/parser/: base.py  blockquote_normalizer.py  epub_parser.py  format_detector.py  image_url_rewrite.py  mobi_parser.py  pdf_parser.py  section_classifier.py  structure_detector.py  text_utils.py
backend/app/services/summarizer/: __init__.py  (+8 more)
backend/app/utils/: text_similarity.py
backend/scripts/: verify_packaging.sh
backend/tests/: conftest.py
backend/tests/e2e/: test_cli_flows.py  test_export_cli.py  test_v1_1_flows.py
backend/tests/fixtures/: README.md  download_fixtures.py
backend/tests/integration/: test_annotation_playlist.py  test_api_tags_and_settings.py  test_audio_gen_service.py  test_audio_job_e2e.py  test_audio_job_progress_events.py  test_audio_migration.py  test_audio_models.py  test_audio_routes.py  test_book_delete_cascade.py  test_book_delete_cascade_audio.py  test_book_pipeline.py  test_book_reimport_audio.py  test_db_operations.py  test_doctor_cmd.py  test_eval_golden_set.py  test_eval_integration.py  test_image_url_substitution.py  test_kokoro_prewarm.py  test_migration_image_id_rewrite.py  test_migration_image_placeholders.py  test_migration_preset_typography.py  test_migration_reclassify_sections.py  test_migration_rewrite_raw_image_refs.py  test_migration_v1_4.py  test_migrations_v1_5.py  test_orphan_job_sweep.py  test_orphan_recovery.py  test_parser_blockquote_wiring.py  test_retry_clears_failure_cols.py  test_section_edit_db.py  test_static_serving.py  test_summarize_commit_order.py  test_summarize_failed_scope.py  test_summarize_integration.py  test_summarize_scope_and_filter.py  test_summarize_sse_events.py  test_summarizer_clear_and_pending.py  test_summarizer_failure_capture.py  test_summarizer_image_rewrite.py  test_summarizer_incremental_commit.py  (+3 more)
backend/tests/unit/: test_ai_thread_service.py  test_ai_thread_title.py  test_api_deps.py  test_api_main_static.py  test_api_schemas.py  test_backup.py  test_blockquote_normalizer.py  test_book_service.py  test_claude_cli_provider.py  test_cli_config_set.py  test_codex_cli_provider.py  test_config.py  test_cors.py  test_db_busy_handler.py  test_embedding.py  test_epub_parser.py  test_epub_parser_classifier_wiring.py  test_eval_adaptations.py  test_eval_deterministic.py  test_eval_display.py  test_eval_service.py  test_evaluator.py  test_export_renderer.py  test_format_detector.py  test_health_cmd.py  test_image_captioner.py  test_image_model.py  test_image_pipeline_integration.py  test_image_url_rewrite.py  test_image_url_rewrite_id_scheme.py  test_init_migrations.py  test_job_queue_worker.py  test_llm_preflight_service.py  test_llm_provider.py  test_mobi_parser.py  test_models.py  test_no_cli_command_orphans.py  test_orphan_sweep_predicate.py  test_paraphrased_quotes.py  test_pdf_parser.py  (+26 more)
(+610 files in other folders)
