[project]
name = "bookcompanion"
version = "0.1.0"
description = "Personal book summarization and knowledge extraction tool"
requires-python = ">=3.12"
dependencies = [
    # CLI
    "typer>=0.15.0",
    "rich>=13.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "numpy>=1.26.0",
    # Config
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    # Parsing
    "ebooklib>=0.18",
    "markdownify>=0.14.0",
    "pymupdf4llm>=0.0.17",
    # Embeddings
    "fastembed>=0.4.0",
    "httpx>=0.28.0",
    # Platform
    "platformdirs>=4.0.0",
    # Clipboard (for --copy flag)
    "pyperclip>=1.9.0",
    # Prompts
    "jinja2>=3.1.0",
    # Logging
    "structlog>=24.0.0",
    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.18",
    "apscheduler>=3.10.0",
    "pysbd>=0.3.4",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
# pip install bookcompanion[kokoro] — local Kokoro TTS engine.
# Adds ~90 transitive deps (numpy/scipy/onnxruntime/phonemizer chain) — keeps
# the default install lean for Web Speech users.
kokoro = [
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.13.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
bookcompanion = "app.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration_llm: tests that make real LLM API calls (slow, require Claude CLI)",
    "slow: tests that build artifacts or spin up venvs (~60s; opt in with -m slow)",
    "kokoro: tests requiring the Kokoro-82M model (~80MB download + ffmpeg; opt in with -m kokoro)",
]
addopts = "-m 'not slow and not kokoro'"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["app/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"app/api/deps.py" = ["B008"]
"app/api/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/config/models.yaml" = "app/config/models.yaml"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "httpx>=0.28.0",
    "hatchling>=1.25,<2",
]
